y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : DO $$7 cmd WHILE '(' exp ')' ';'

  25  $$8 :

  26  $$9 :

  27  $$10 :

  28  $$11 :

  29  $$12 :

  30  cmd : $$8 FOR $$9 '(' ExpOpc ';' $$10 ExpOpc ';' $$11 ExpOpc $$12 ')' cmd

  31  $$13 :

  32  cmd : IF '(' exp $$13 ')' cmd restoIf

  33  ExpOpc : exp
  34         |

  35  $$14 :

  36  restoIf : ELSE $$14 cmd
  37          |

  38  exp : NUM
  39      | TRUE
  40      | FALSE
  41      | ID
  42      | ID INCR
  43      | INCR ID
  44      | '(' exp ')'
  45      | '!' exp
  46      | exp '+' exp
  47      | exp '-' exp
  48      | exp '*' exp
  49      | exp '/' exp
  50      | exp '%' exp
  51      | exp '>' exp
  52      | exp '<' exp
  53      | exp EQ exp
  54      | exp LEQ exp
  55      | exp GEQ exp
  56      | exp NEQ exp
  57      | exp OR exp
  58      | exp AND exp
  59      | ID '=' exp
  60      | CONTINUE
  61      | BREAK

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)
	$$8 : .  (25)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	DO  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	FOR  reduce 25
	'}'  reduce 4

	$$3  goto 35
	cmd  goto 36
	exp  goto 37
	$$8  goto 38


state 20
	exp : ID .  (41)
	exp : ID . INCR  (42)
	exp : ID . '=' exp  (59)

	INCR  shift 39
	'='  shift 40
	EQ  reduce 41
	LEQ  reduce 41
	GEQ  reduce 41
	NEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	')'  reduce 41
	';'  reduce 41


state 21
	exp : NUM .  (38)

	.  reduce 38


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 41
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 42
	.  error


state 24
	cmd : IF . '(' exp $$13 ')' cmd restoIf  (32)

	'('  shift 43
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 44


state 26
	exp : TRUE .  (39)

	.  reduce 39


state 27
	exp : FALSE .  (40)

	.  reduce 40


state 28
	exp : CONTINUE .  (60)

	.  reduce 60


state 29
	exp : BREAK .  (61)

	.  reduce 61


state 30
	exp : INCR . ID  (43)

	ID  shift 45
	.  error


state 31
	cmd : DO . $$7 cmd WHILE '(' exp ')' ';'  (24)
	$$7 : .  (23)

	.  reduce 23

	$$7  goto 46


state 32
	exp : '!' . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 47


state 33
	exp : '(' . exp ')'  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 48


state 34
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 49


state 35
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 50
	.  error


state 36
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 37
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)

	EQ  shift 51
	LEQ  shift 52
	GEQ  shift 53
	NEQ  shift 54
	AND  shift 55
	OR  shift 56
	'>'  shift 57
	'<'  shift 58
	'+'  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	'%'  shift 63
	';'  shift 64
	.  error


state 38
	cmd : $$8 . FOR $$9 '(' ExpOpc ';' $$10 ExpOpc ';' $$11 ExpOpc $$12 ')' cmd  (30)

	FOR  shift 65
	.  error


state 39
	exp : ID INCR .  (42)

	.  reduce 42


state 40
	exp : ID '=' . exp  (59)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 66


state 41
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 67
	.  error


state 42
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 68
	.  error


state 43
	cmd : IF '(' . exp $$13 ')' cmd restoIf  (32)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 69


state 44
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 70
	.  error


state 45
	exp : INCR ID .  (43)

	.  reduce 43


state 46
	cmd : DO $$7 . cmd WHILE '(' exp ')' ';'  (24)
	$$8 : .  (25)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	DO  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	FOR  reduce 25

	cmd  goto 71
	exp  goto 37
	$$8  goto 38


state 47
	exp : '!' exp .  (45)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)

	.  reduce 45


state 48
	exp : '(' exp . ')'  (44)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)

	EQ  shift 51
	LEQ  shift 52
	GEQ  shift 53
	NEQ  shift 54
	AND  shift 55
	OR  shift 56
	'>'  shift 57
	'<'  shift 58
	'+'  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	'%'  shift 63
	')'  shift 72
	.  error


state 49
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)
	$$8 : .  (25)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	DO  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	'}'  shift 73
	FOR  reduce 25

	cmd  goto 36
	exp  goto 37
	$$8  goto 38


state 50
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 51
	exp : exp EQ . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 74


state 52
	exp : exp LEQ . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 75


state 53
	exp : exp GEQ . exp  (55)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 76


state 54
	exp : exp NEQ . exp  (56)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 77


state 55
	exp : exp AND . exp  (58)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 78


state 56
	exp : exp OR . exp  (57)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 79


state 57
	exp : exp '>' . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 80


state 58
	exp : exp '<' . exp  (52)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 81


state 59
	exp : exp '+' . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 82


state 60
	exp : exp '-' . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 83


state 61
	exp : exp '*' . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 84


state 62
	exp : exp '/' . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 85


state 63
	exp : exp '%' . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	CONTINUE  shift 28
	BREAK  shift 29
	INCR  shift 30
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 86


state 64
	cmd : exp ';' .  (14)

	.  reduce 14


state 65
	cmd : $$8 FOR . $$9 '(' ExpOpc ';' $$10 ExpOpc ';' $$11 ExpOpc $$12 ')' cmd  (30)
	$$9 : .  (26)

	.  reduce 26

	$$9  goto 87


state 66
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . '<' exp  (52)
	exp : exp . EQ exp  (53)
	exp : exp . LEQ exp  (54)
	exp : exp . GEQ exp  (55)
	exp : exp . NEQ exp  (56)
	exp : exp . OR exp  (57)
	exp : exp . AND exp  (58)
	exp : ID '=' exp .  (59)

	EQ  shift 51
	LEQ  shift 52
	GEQ  shift 53
	NEQ  shift 54
	AND  shift 55
	OR  shift 56
	'>'  shift 57
	'<'  shift 58
	'+'  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	'%'  shift 63
	')'  reduce 59
	';'  reduce 59

